[gd_scene load_steps=9 format=3 uid="uid://cncge7c4uemyj"]

[ext_resource type="Script" path="res://scripts/for_scenes/tutorial.gd" id="1_cxgyi"]
[ext_resource type="VideoStream" path="res://assets/tutorial/movement.ogv" id="2_n5tch"]
[ext_resource type="VideoStream" path="res://assets/tutorial/combat.ogv" id="3_r5mke"]
[ext_resource type="VideoStream" path="res://assets/tutorial/HUD.ogv" id="4_fd6i3"]
[ext_resource type="VideoStream" path="res://assets/tutorial/pickup.ogv" id="5_68iot"]
[ext_resource type="VideoStream" path="res://assets/tutorial/hide_reveal_upgrade.ogv" id="6_qs3yq"]
[ext_resource type="Theme" uid="uid://yx62bcop46jb" path="res://themes/navigation_buttons.tres" id="9_yxu3a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efer2"]
bg_color = Color(0, 0, 0, 0.870588)

[node name="Tutorial" type="Control" node_paths=PackedStringArray("tutor_text", "movie")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cxgyi")
tutor_vids = Array[VideoStreamTheora]([ExtResource("2_n5tch"), ExtResource("3_r5mke"), ExtResource("4_fd6i3"), ExtResource("5_68iot"), ExtResource("6_qs3yq"), null])
tutor_text = NodePath("Label")
movie = NodePath("Visuals/VideoStreamPlayer")
text_bank = Array[String](["TUTORIAL_1", "TUTORIAL_2", "TUTORIAL_3", "TUTORIAL_4", "TUTORIAL_5", "TUTORIAL_6", "TUTORIAL_7", "TUTORIAL_8", "TUTORIAL_9"])

[node name="Visuals" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="Visuals"]
layout_mode = 2
volume_db = -80.0
loop = true

[node name="Next" type="Button" parent="."]
z_index = 100
layout_mode = 2
offset_left = 1475.0
offset_top = 979.0
offset_right = 1645.0
offset_bottom = 1075.0
theme = ExtResource("9_yxu3a")
text = "NEXT"

[node name="Skip" type="Button" parent="."]
z_index = 100
layout_mode = 2
offset_left = 653.5
offset_top = 984.0
offset_right = 1120.5
offset_bottom = 1080.0
theme = ExtResource("9_yxu3a")
text = "SKIP"

[node name="Previous" type="Button" parent="."]
z_index = 100
layout_mode = 2
offset_left = 117.0
offset_top = 982.0
offset_right = 433.0
offset_bottom = 1078.0
grow_vertical = 0
theme = ExtResource("9_yxu3a")
text = "PREVIOUS"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 67.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_efer2")
text = "DEFAULT TEXT"
horizontal_alignment = 1
autowrap_mode = 2
uppercase = true

[connection signal="button_up" from="Next" to="." method="_on_next_button_up"]
[connection signal="button_up" from="Skip" to="." method="_on_skip_button_up"]
[connection signal="button_up" from="Previous" to="." method="_on_previous_button_up"]
